<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.spectrum.MainActivity" 
    android:background="@color/black">
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/aqua"
        android:text="@string/spectrum" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/textView1"
        android:text="@string/name"
        android:textColor="@color/aqua"
        android:textSize="16sp"
        android:textStyle="bold"/>

     <Button
        android:id="@+id/onButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg"
        android:textColor="@color/aqua"
        android:text="@string/on" />
    
       <Button
        android:id="@+id/offButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/onButton"
        android:layout_below="@+id/msg"
        android:textColor="@color/aqua"
        android:text="@string/off" />
       
       <Button
        android:id="@+id/listButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/offButton"
        android:layout_below="@+id/msg"
        android:textColor="@color/aqua"
        android:text="@string/paired_list"/>
       
       <ListView style="@style/listStyle"
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listButton"
        android:visibility="visible">
       </ListView>
       
       <Button
        android:id="@+id/inStreamButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Oscilloscope"
        android:textColor="@color/aqua"
        android:text="@string/instream" />
       
       <Button
        android:id="@+id/Oscilloscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listView1"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/centerPoint"
        android:textColor="@color/aqua"
        android:text="@string/oscilloscope" />
        
        <TextView
        android:id="@+id/centerPoint"
        android:text=""
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />
       
       <Button
        android:id="@+id/SpectrumAnalyzer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_below="@+id/listView1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/centerPoint"
        android:textColor="@color/aqua"
        android:text="@string/spectrum_analyzer" />
  
</RelativeLayout>